--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "@inertiajs/inertia": "^0.11.0",
     "@inertiajs/inertia-svelte": "^0.8.0",
+    "@inertiajs/inertia-vue3": "^0.6.0",
     "svelte": "^3.48.0",
     "ziggy-js": "^1.4.6"
   },
   "devDependencies": {
     "@symfony/webpack-encore": "^2.1.0",
     "svelte-loader": "^3.1.2",
+    "vue-loader": "^17.0.0",
     "webpack-notifier": "^1.15.0"
   }
 }
